<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/initial_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitialActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="219dp"
        android:layout_height="0dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="51dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/fav_news_websiteET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bitcoin_splash" />

    <EditText
        android:id="@+id/userET"
        android:layout_width="302dp"
        android:layout_height="52dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/fav_cryptoET"
        app:layout_constraintEnd_toEndOf="@+id/fav_cryptoET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fav_news_websiteET"
        app:layout_constraintTop_toBottomOf="@+id/fav_news_websiteET" />

    <EditText
        android:id="@+id/fav_cryptoET"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="273dp"
        android:ems="10"
        android:hint="@string/fav_crypto_tv"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/mainActBtn"
        app:layout_constraintEnd_toEndOf="@+id/fav_news_websiteET"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/fav_news_websiteET"
        app:layout_constraintTop_toBottomOf="@+id/userET" />

    <EditText
        android:id="@+id/fav_news_websiteET"
        android:layout_width="302dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:hint="@string/fav_news_website"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/userET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/mainActBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fav_cryptoET" />

    <Button
        android:id="@+id/submit_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="50dp"
        android:text="Button"
        app:layout_constraintStart_toStartOf="@+id/fav_cryptoET"
        app:layout_constraintTop_toBottomOf="@+id/fav_cryptoET" />

</androidx.constraintlayout.widget.ConstraintLayout>